--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html class="no-js">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Tigerwit</title>
+    <title>ATOM Trade</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -13,13 +13,8 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-  </head>
-  <body ng-app="tigerwitApp">
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <!-- Add your site or application content here -->
+</head>
+<body ng-app="atomApp">
     <div ng-view class="wd-view"></div>
 
     <!-- build:js(.) scripts/oldieshim.js -->
@@ -42,20 +37,20 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="base/webuploader-0.1.5/webuploader.js"></script>
-        <script src="scripts/app.js"></script>
-        <script src="scripts/common/directives/upload-form.js"></script>
-        <script src="scripts/common/directives/loading.js"></script>
-        <script src="scripts/common/directives/width-equal-height.js"></script>
-        <script src="scripts/common/directives/place-holder.js"></script>
-        <script src="scripts/common/services/config.js"></script>
-        <script src="scripts/common/services/storage.js"></script>
-        <script src="scripts/account/controllers/register.js"></script>
-        <script src="scripts/account/controllers/login.js"></script>
-        <script src="scripts/account/controllers/money.js"></script>
-        <script src="scripts/account/services/account.js"></script>
-        <script src="scripts/account/services/money.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <!-- <script src="base/webuploader-0.1.5/webuploader.js"></script> -->
+    <script src="scripts/app.js"></script>
+    <!-- <script src="scripts/common/directives/upload-form.js"></script> -->
+    <script src="scripts/common/directives/loading.js"></script>
+    <script src="scripts/common/directives/width-equal-height.js"></script>
+    <script src="scripts/common/directives/placeholder.js"></script>
+    <script src="scripts/common/directives/footer.js"></script>
+    <script src="scripts/common/services/config.js"></script>
+    <script src="scripts/common/services/storage.js"></script>
+    <script src="scripts/account/services/account.js"></script>
+    <script src="scripts/account/services/money.js"></script>
+    <script src="scripts/account/controllers/register.js"></script>
+    <!-- endbuild -->
+
 </body>
 </html>
