[feature] 相关界面开发。

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
     <script src="scripts/common/directives/loading.js"></script>
     <script src="scripts/common/directives/width-equal-height.js"></script>
     <script src="scripts/common/directives/placeholder.js"></script>
+    <script src="scripts/common/directives/header.js"></script>
     <script src="scripts/common/directives/footer.js"></script>
     <script src="scripts/common/services/config.js"></script>
     <script src="scripts/common/services/storage.js"></script>
