--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
     <script src="scripts/account/services/account.js"></script>
     <script src="scripts/account/services/money.js"></script>
     <script src="scripts/account/controllers/register.js"></script>
+    <script src="scripts/index/controllers/index.js"></script>
     <!-- endbuild -->
 
 </body>
