[feature] 页面样式修改。

--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,9 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <!-- <script src="base/webuploader-0.1.5/webuploader.js"></script> -->
+    <script src="base/webuploader-0.1.5/webuploader.js"></script>
     <script src="scripts/app.js"></script>
-    <!-- <script src="scripts/common/directives/upload-form.js"></script> -->
+    <script src="scripts/common/directives/upload-form.js"></script>
     <script src="scripts/common/directives/loading.js"></script>
     <script src="scripts/common/directives/width-equal-height.js"></script>
     <script src="scripts/common/directives/placeholder.js"></script>
@@ -49,9 +49,11 @@
     <script src="scripts/common/services/config.js"></script>
     <script src="scripts/common/services/storage.js"></script>
     <script src="scripts/account/services/account.js"></script>
-    <script src="scripts/account/services/money.js"></script>
-    <script src="scripts/account/controllers/register.js"></script>
     <script src="scripts/index/controllers/index.js"></script>
+    <script src="scripts/index/controllers/download.js"></script>
+    <script src="scripts/account/controllers/register.js"></script>
+    <script src="scripts/account/controllers/login.js"></script>
+    <script src="scripts/account/controllers/open.js"></script>
     <!-- endbuild -->
 
 </body>
