--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     <script src="scripts/account/controllers/register.js"></script>
     <script src="scripts/account/controllers/login.js"></script>
     <script src="scripts/account/controllers/open.js"></script>
+    <script src="scripts/about/directives/nav.js"></script>
     <!-- endbuild -->
 
 </body>
