--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
     <script src="scripts/account/controllers/login.js"></script>
     <script src="scripts/account/controllers/open.js"></script>
     <script src="scripts/about/directives/nav.js"></script>
+    <script src="scripts/my/directives/nav.js"></script>
     <!-- endbuild -->
 
 </body>
