--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title>ATOM Trade</title>
+    <title>国京证券</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -56,6 +56,7 @@
     <script src="scripts/account/controllers/open.js"></script>
     <script src="scripts/about/directives/nav.js"></script>
     <script src="scripts/my/directives/nav.js"></script>
+    <script src="scripts/my/controllers/my.js"></script>
     <!-- endbuild -->
 
 </body>
