--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
     <script src="scripts/about/directives/nav.js"></script>
     <script src="scripts/my/directives/nav.js"></script>
     <script src="scripts/my/controllers/my.js"></script>
+    <script src="scripts/my/controllers/change-password.js"></script>
     <!-- endbuild -->
 
 </body>
