--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
     <script src="scripts/common/directives/footer.js"></script>
     <script src="scripts/common/services/config.js"></script>
     <script src="scripts/common/services/storage.js"></script>
+    <script src="scripts/common/services/check.js"></script>
     <script src="scripts/account/services/account.js"></script>
     <script src="scripts/index/controllers/index.js"></script>
     <script src="scripts/index/controllers/download.js"></script>
