--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
     <script src="scripts/common/services/storage.js"></script>
     <script src="scripts/common/services/check.js"></script>
     <script src="scripts/account/services/account.js"></script>
+    <script src="scripts/account/services/money.js"></script>
     <script src="scripts/index/controllers/index.js"></script>
     <script src="scripts/index/controllers/download.js"></script>
     <script src="scripts/account/controllers/register.js"></script>
@@ -59,6 +60,8 @@
     <script src="scripts/my/directives/nav.js"></script>
     <script src="scripts/my/controllers/my.js"></script>
     <script src="scripts/my/controllers/change-password.js"></script>
+    <script src="scripts/my/controllers/money-in.js"></script>
+    <script src="scripts/my/controllers/money-out.js"></script>
     <!-- endbuild -->
 
 </body>
