[feature] 移动端功能完善。

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <!-- <script src="bower_components/angular-animate/angular-animate.js"></script> -->
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -38,16 +38,18 @@
     <script src="scripts/app.js"></script>
     <!-- <script src="scripts/common/directives/upload-form.js"></script> -->
     <script src="scripts/common/directives/loading.js"></script>
-    <script src="scripts/common/directives/width-equal-height.js"></script>
+    <!-- <script src="scripts/common/directives/width-equal-height.js"></script> -->
     <!-- <script src="scripts/common/directives/placeholder.js"></script> -->
     <script src="scripts/common/directives/header.js"></script>
     <script src="scripts/common/directives/footer.js"></script>
     <script src="scripts/common/services/config.js"></script>
     <script src="scripts/common/services/storage.js"></script>
+    <script src="scripts/common/services/check.js"></script>
     <script src="scripts/account/services/account.js"></script>
     <script src="scripts/account/controllers/register.js"></script>
     <script src="scripts/account/controllers/login.js"></script>
     <script src="scripts/account/controllers/open.js"></script>
+    <script src="scripts/my/controllers/my.js"></script>
     <!-- endbuild -->
 
 </body>
